Developer/src/objects/EnglishTextline__c.object
<CustomObject>
    <fields>
        <fullName>AAAA__c</fullName>
        <label>ああああ</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Japanese__c</fullName>
        <label>Japanese</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>テキストエリア</label>
        <type>TextArea</type>
    </fields>
    <label>EnglishTextline</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>Answer</fullName>
        <columns>NAME</columns>
        <columns>Japanese__c</columns>
        <columns>English__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>Answer</label>
    </listViews>
    <listViews>
        <fullName>Japanese</fullName>
        <columns>NAME</columns>
        <columns>Japanese__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>Japanese</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EnglishTextline名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>